overrided the overflow hidden to show the number

--- a/src/app/dashboard/targets-widget/targets-widget.component.html
+++ b/src/app/dashboard/targets-widget/targets-widget.component.html
@@ -8,8 +8,8 @@
         </div>
         <div class="details">
             <span class="fs-14 c-grey">Money</span>
-            <span class="d-block mt-5 mb-10 fw-bold">$20.000</span>
-            <div class="progress position-relative">
+            <span class="d-block mt-1 mb-10 fw-bold">$20.000</span>
+            <div class="progress position-relative overflow-visible">
                 <span class="bg-blue blue" style="width: 80%">
                     <span class="bg-blue">80%</span>
                 </span>
@@ -22,8 +22,8 @@
         </div>
         <div class="details">
             <span class="fs-14 c-grey">Projects</span>
-            <span class="d-block mt-5 mb-10 fw-bold">24</span>
-            <div class="progress position-relative">
+            <span class="d-block mt-1 mb-10 fw-bold">24</span>
+            <div class="progress position-relative overflow-visible">
                 <span class="bg-orange orange" style="width: 55%">
                     <span class="bg-orange">55%</span>
                 </span>
@@ -36,8 +36,8 @@
         </div>
         <div class="details">
             <span class="fs-14 c-grey">Team</span>
-            <span class="d-block mt-5 mb-10 fw-bold">12</span>
-            <div class="progress position-relative">
+            <span class="d-block mt-1 mb-10 fw-bold">12</span>
+            <div class="progress position-relative overflow-visible">
                 <span class="bg-green green" style="width: 75%">
                     <span class="bg-green">75%</span>
                 </span>
