--- a/src/app/dashboard/targets-widget/targets-widget.component.scss
+++ b/src/app/dashboard/targets-widget/targets-widget.component.scss
@@ -1,4 +1,5 @@
 @import "../../../assets/variables.scss";
+@import "../../../assets/framework.scss";
 
 .targets {
   padding: 20px;
@@ -30,7 +31,6 @@
     top: 0;
     height: 100%;
     span {
-      background-color: royalblue;
       position: absolute;
       bottom: 16px;
       right: -16px;
