--- a/src/app/files-page/files-page.component.html
+++ b/src/app/files-page/files-page.component.html
@@ -1,1 +1,14 @@
-<p>files-page works!</p>
+<div class="files-content d-grid gap-20">
+    <div class="file bg-white p-10 rad-10">
+        <i class="fa-solid fa-download c-grey p-absolute"></i>
+        <div class="icon txt-c">
+            <img class="mt-15 mb-15" src="imgs/pdf.svg" alt="" />
+        </div>
+        <div class="txt-c mb-10 fs-14">my-file.pdf</div>
+        <p class="c-grey fs-13">Elzero</p>
+        <div class="info between-flex mt-10 pt-10 fs-13 c-grey">
+            <span>20/06/2020</span>
+            <span>5.5MB</span>
+        </div>
+    </div>
+</div>
