--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -34,7 +34,7 @@
             </a>
         </li>
         <li>
-            <a class="d-flex align-items-center text-dark" routerLink="dashboard"><i class="fa-regular fa-file"></i>
+            <a class="d-flex align-items-center text-dark" routerLink="files"><i class="fa-regular fa-file"></i>
                 <span class="hide-mobile">Files</span>
             </a>
         </li>
