added the new feature of sass @use

--- a/src/app/dashboard/courses/courses.component.scss
+++ b/src/app/dashboard/courses/courses.component.scss
@@ -1,5 +1,4 @@
-@import "../../../assets/framework.scss";
-@import "../../../assets/framework.scss";
+@use "../../../assets/framework.scss" as *;
 
 .courses-page {
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
